Completed the left-side of the sign-up form. Matches the reference image.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Form</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="inner img-background">
+            
+        </div>
+        <div class="logosection">
+            <div class="centeringlogo">
+                <img class="logo" src="odin-lined.png" alt="The Odin Project Logo">
+                <span class="odin">Odin</span>
+            </div>
+        </div>
+        <div class="inner form">
+            <form method="get"></form>
+        </div>
+    </div>  
 </body>
 </html>
