Added the header for the sign-up form

--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
         <div class="inner img-background">
             
         </div>
+
         <div class="logosection">
             <div class="centeringlogo">
                 <img class="logo" src="odin-lined.png" alt="The Odin Project Logo">
                 <span class="odin">Odin</span>
             </div>
         </div>
-        <div class="inner form">
-            <form method="get"></form>
+
+        <div class="innerform">
+            <div class="header">
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</p>
+                
+                <p>You <em>know</em> you want to.</p>
+            </div>
+            <div class="form">
+                <form method="get">
+
+                </form>
+            </div>
+            <div class="foot">
+
+            </div>
         </div>
     </div>  
 </body>
